(lang dune 3.3)

(name dap_encoding)

(generate_opam_files true)

; (source
;  (github username/reponame))

(authors "Simon Parry")

(maintainers "Simon Parry")

(license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name dap_encoding)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune data-encoding)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
